--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a class="navbar-brand gugi-font " href="#home"><img src="./images/logo.png" alt="로고"> 이젠 Cook</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="nav-menu" aria-controls="nav-menu" aria-expanded="false"
+                data-bs-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -480,7 +480,7 @@
         </footer>
     <!-- footer 끝 -->
 
-    <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
