--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         </footer>
     <!-- footer 끝 -->
 
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
